--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.fr.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.fr.resx
@@ -121,17 +121,29 @@
 Une fois l'objet récupéré, il apparait dans votre HUD.
 Vous pouvez attaquer avec cet objet à l'aide de la touche [ESPACE]</value>
 	</data>
+	<data name="Hold_1_Title" xml:space="preserve">
+		<value>Porter un objet</value>
+	</data>
 	<data name="Interaction_1" xml:space="preserve">
 		<value>Vous pouvez interragir avec plusieurs éléments d'interaction comme les PNJ et les objets. 
 Pour cela, appuyez sur [E] lorsque vous êtes à proximité d'une cible avec laquelle vous pouvez interragir.</value>
+	</data>
+	<data name="Interaction_1_Title" xml:space="preserve">
+		<value>Interaction</value>
 	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
 		<value>Certains objets peuvent interagir avec plusieurs objets de l'environnement en appuyant sur la touche [Espace].
 Par exemple, vous pouvez utiliser un tournevis sur une grille de ventilation.</value>
 	</data>
+	<data name="Special_Interaction_1_Title" xml:space="preserve">
+		<value>Interaction spéciale </value>
+	</data>
 	<data name="Throw_1" xml:space="preserve">
 		<value>Une fois l'objet récupéré. Vous pouvez ensuite lancer cet objet en appuyant sur la touche [MAJ] 
 à votre convenance pour doser le lancer. Lorsque vous appuyez brièvement sur [Shift], l'objet tombe à vos pieds.
 La touche [E] annule le lancer.</value>
+	</data>
+	<data name="Throw_1_Title" xml:space="preserve">
+		<value>Lancer d'objets</value>
 	</data>
 </root>
