--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -122,23 +122,36 @@ Once the object is recovered, it appears in your HUD.
 You can attack with this object with the [SPACE] key.
 </value>
 	</data>
+	<data name="Hold_1_Title" xml:space="preserve">
+		<value>Hold</value>
+	</data>
 	<data name="Interaction_1" xml:space="preserve">
 		<value>You can interact with multiple interaction elements. 
 Like NPCs and objects. 
 For that press [E] when you are near for a target with which you can interact.
 </value>
 	</data>
+	<data name="Interaction_1_Title" xml:space="preserve">
+		<value>Interaction</value>
+	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
 		<value>Some objects may interact with multiple objects in the environment.
-To do this, press [space] when you are ready for an environment with which an object you own can interact..
+To do this, press [space] when you are near for an environment with which an object you own can interact..
 For example you can use a screwdriver on a ventilation grid.
 </value>
+	</data>
+	<data name="Special_Interaction_1_Title" xml:space="preserve">
+		<value>Special Interaction</value>
 	</data>
 	<data name="Throw_1" xml:space="preserve">
 		<value>Once the object is recovered.
 You can then launch this object by pressing the [Shift] key at your convenience to dose the throw.
-When you squeeze Shift briefly,the object falls to your feet. 
+When you squeeze Shift briefly, the object falls to your feet.
 The [E] key cancels the throw.
+
 </value>
+	</data>
+	<data name="Throw_1_Title" xml:space="preserve">
+		<value>Throw Tutorial</value>
 	</data>
 </root>
