--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.en.resx
@@ -134,6 +134,60 @@ For that press [E] when you are near for a target with which you can interact.
 	<data name="Interaction_1_Title" xml:space="preserve">
 		<value>Interaction</value>
 	</data>
+	<data name="NG1_1_1" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_1_1 Title" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_1_2" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_1_2 Title" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_1_3" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_1_3 Title" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_2_1" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_2_1 Title" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_3_1" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_3_1 Title" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_1" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_1 Title " xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_2" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_2 Title" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_3" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_3 Title" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_4" xml:space="preserve">
+		<value />
+	</data>
+	<data name="NG1_4_4 Title " xml:space="preserve">
+		<value />
+	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
 		<value>Some objects may interact with multiple objects in the environment.
 To do this, press [space] when you are near for an environment with which an object you own can interact..
