--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.fr.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.fr.resx
@@ -148,7 +148,7 @@ Ils nous font surtout des injections. C’est pour notre bien, ils insistent cla
 C’est dans deux jours ! Dans deux jours je passerai le test en compagnie de numéro 1. Nous sommes tellement impatients !
 </value>
 	</data>
-	<data name="NG1_1_1 Title" xml:space="preserve">
+	<data name="NG1_1_1_Title" xml:space="preserve">
 		<value>Journal de Numéro 2</value>
 	</data>
 	<data name="NG1_1_2" xml:space="preserve">
@@ -158,7 +158,7 @@ Soyez fiers d’appartenir au projet “New Dawn” des centres de recherches Se
 C’est cette fierté que vous devez ressentir. La fierté de de reconstruire notre planète.
 </value>
 	</data>
-	<data name="NG1_1_2 Title" xml:space="preserve">
+	<data name="NG1_1_2_Title" xml:space="preserve">
 		<value>Excerpt from "In This Place</value>
 	</data>
 	<data name="NG1_1_3" xml:space="preserve">
@@ -179,7 +179,7 @@ Numéro 11 : 17 février
 Numéro 12 : 18 février
 </value>
 	</data>
-	<data name="NG1_1_3 Title" xml:space="preserve">
+	<data name="NG1_1_3_Title" xml:space="preserve">
 		<value>Liste des horaires de visite médicale : </value>
 	</data>
 	<data name="NG1_2_1" xml:space="preserve">
@@ -200,7 +200,7 @@ Numéro 3 : A regardé…
 (Les notes s’arrêtent là…)
 </value>
 	</data>
-	<data name="NG1_2_1 Title" xml:space="preserve">
+	<data name="NG1_2_1_Title" xml:space="preserve">
 		<value>Rapport d’observation de la zone de vie</value>
 	</data>
 	<data name="NG1_3_1" xml:space="preserve">
@@ -209,7 +209,7 @@ A la 04M ils sont maltraités. Les scientifiques ne leur portent que peu d’att
 Pauvres jeunes…
 </value>
 	</data>
-	<data name="NG1_3_1 Title" xml:space="preserve">
+	<data name="NG1_3_1_Title" xml:space="preserve">
 		<value>Journal d’un garde</value>
 	</data>
 	<data name="NG1_4_1" xml:space="preserve">
@@ -218,7 +218,7 @@ Cette nouvelle génération devrait être beaucoup plus endurante. Nous espéron
 Pourvu que numéro 1 et un 2 réussissent leurs tests...
 </value>
 	</data>
-	<data name="NG1_4_1 Title " xml:space="preserve">
+	<data name="NG1_4_1_Title " xml:space="preserve">
 		<value>Rapport des tests médicaux de Numéro 1</value>
 	</data>
 	<data name="NG1_4_2" xml:space="preserve">
@@ -227,7 +227,7 @@ Les numéros semblent développer une sorte de...fascination pour la porte d’e
 D’autres salons de surveillance constatent le même comportement. 
 Restez vigilant et n’oubliez pas de nous faire part de tout retour inquiétant.</value>
 	</data>
-	<data name="NG1_4_2 Title" xml:space="preserve">
+	<data name="NG1_4_2_Title" xml:space="preserve">
 		<value>Remarque sur la vie des numéros</value>
 	</data>
 	<data name="NG1_4_3" xml:space="preserve">
@@ -238,7 +238,7 @@ Cameron : 18
 James : 14
 </value>
 	</data>
-	<data name="NG1_4_3 Title" xml:space="preserve">
+	<data name="NG1_4_3_Title" xml:space="preserve">
 		<value>Notes griffonnées</value>
 	</data>
 	<data name="NG1_4_4" xml:space="preserve">
@@ -250,7 +250,7 @@ Bonne chance avec les 08M j'espère vraiment que ça marchera cette fois...
 PS : N’oublie pas que la carte d'accès de la salle d'expérience est dans le labo central.
 </value>
 	</data>
-	<data name="NG1_4_4 Title " xml:space="preserve">
+	<data name="NG1_4_4_Title " xml:space="preserve">
 		<value>Notes d’un scientifique</value>
 	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
