--- a/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
+++ b/Assets/SmartLocalizationWorkspace/Data/LanguageData/Language.resx
@@ -116,6 +116,21 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+	<data name="G1_1_P1Cut2" xml:space="preserve">
+		<value>Guard 1 Dialog Cutscene #2</value>
+	</data>
+	<data name="G1_1_P2Cut2" xml:space="preserve">
+		<value>Guard 1 Dialog Cutscene #2</value>
+	</data>
+	<data name="G1_1_P3Cut2" xml:space="preserve">
+		<value>Guard 1 Dialog Cutscene #2</value>
+	</data>
+	<data name="G1_1Cut2" xml:space="preserve">
+		<value>Guard 1 Dialog Cutscene #2</value>
+	</data>
+	<data name="G2_1Cut2" xml:space="preserve">
+		<value>Guard 2 Dialog Cutscene #2</value>
+	</data>
 	<data name="Hold_1" xml:space="preserve">
 		<value>Hold tutorial</value>
 	</data>
@@ -127,6 +142,78 @@
 	</data>
 	<data name="Interaction_1_Title" xml:space="preserve">
 		<value>Interaction tutorial Title</value>
+	</data>
+	<data name="N3_1" xml:space="preserve">
+		<value>Number 3 Dialog</value>
+	</data>
+	<data name="N3_1_P1" xml:space="preserve">
+		<value>Number 3 Dialog</value>
+	</data>
+	<data name="N3_1_P2" xml:space="preserve">
+		<value>Number 3 Dialog</value>
+	</data>
+	<data name="N4_1" xml:space="preserve">
+		<value>Number 4 Dialog</value>
+	</data>
+	<data name="N4_1_P1" xml:space="preserve">
+		<value>Number 4 Dialog</value>
+	</data>
+	<data name="N4_1_P2" xml:space="preserve">
+		<value>Number 4 Dialog</value>
+	</data>
+	<data name="N4_1_P3" xml:space="preserve">
+		<value>Number 4 Dialog</value>
+	</data>
+	<data name="N5_1" xml:space="preserve">
+		<value>Number 5 Dialog</value>
+	</data>
+	<data name="N5_1_P1" xml:space="preserve">
+		<value>Number 5 Dialog</value>
+	</data>
+	<data name="N5_1_P2" xml:space="preserve">
+		<value>Number 5 Dialog</value>
+	</data>
+	<data name="N5_1Cut2" xml:space="preserve">
+		<value>Number 5 Dialog Cutscene #2</value>
+	</data>
+	<data name="N6_1" xml:space="preserve">
+		<value>Number 6 Dialog</value>
+	</data>
+	<data name="N6_1P1" xml:space="preserve">
+		<value>Number 6 Dialog</value>
+	</data>
+	<data name="N7_1" xml:space="preserve">
+		<value>Number 7 Dialog</value>
+	</data>
+	<data name="N7_1_P1" xml:space="preserve">
+		<value>Number 7 Dialog</value>
+	</data>
+	<data name="N7_1_P10" xml:space="preserve">
+		<value>Number 7 Dialog</value>
+	</data>
+	<data name="N8_1" xml:space="preserve">
+		<value>Number 8 Dialog</value>
+	</data>
+	<data name="N8_1P1" xml:space="preserve">
+		<value>Number 8 Dialog</value>
+	</data>
+	<data name="N8_1P2" xml:space="preserve">
+		<value>Number 8 Dialog</value>
+	</data>
+	<data name="N9_1" xml:space="preserve">
+		<value>Number 9 Dialog</value>
+	</data>
+	<data name="N9_1_P1Cut1" xml:space="preserve">
+		<value>Number 9 Dialog Cutscene #1</value>
+	</data>
+	<data name="N9_1Cut1" xml:space="preserve">
+		<value>Number 9 Dialog Cutscene #1</value>
+	</data>
+	<data name="N9_1P1" xml:space="preserve">
+		<value>Number 9 Dialog</value>
+	</data>
+	<data name="N9_1P2" xml:space="preserve">
+		<value>Number 9 Dialog</value>
 	</data>
 	<data name="NG1_1_1" xml:space="preserve">
 		<value>Texte du Journal de Numéro 2</value>
@@ -181,6 +268,84 @@
 	</data>
 	<data name="NG1_4_4_Title " xml:space="preserve">
 		<value>Notes of a scientist Title</value>
+	</data>
+	<data name="S1_1_P1Cut4" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #4</value>
+	</data>
+	<data name="S1_1_P2Cut4" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #4</value>
+	</data>
+	<data name="S1_1Cut3" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #3</value>
+	</data>
+	<data name="S1_1Cut4" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #4</value>
+	</data>
+	<data name="S1_1P1Cut3" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #3</value>
+	</data>
+	<data name="S1_1P2Cut3" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #3</value>
+	</data>
+	<data name="S1_1P3Cut4" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #4</value>
+	</data>
+	<data name="S1_1P4Cut4" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #4</value>
+	</data>
+	<data name="S1_1P5Cut4" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #4</value>
+	</data>
+	<data name="S1_1P6Cut4" xml:space="preserve">
+		<value>Scientist 1 Dialog Cutscene #4</value>
+	</data>
+	<data name="S2_1Cut3" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #3</value>
+	</data>
+	<data name="S2_1Cut4" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #4</value>
+	</data>
+	<data name="S2_1P1Cut3" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #3</value>
+	</data>
+	<data name="S2_1P1Cut4" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #4</value>
+	</data>
+	<data name="S2_1P2Cut3" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #3</value>
+	</data>
+	<data name="S2_1P2Cut4" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #4</value>
+	</data>
+	<data name="S2_1P3Cut3" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #3</value>
+	</data>
+	<data name="S2_1P3Cut4" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #4</value>
+	</data>
+	<data name="S2_1P4Cut3" xml:space="preserve">
+		<value>Scientist 2 Dialog Cutscene #3</value>
+	</data>
+	<data name="S3_1Cut4" xml:space="preserve">
+		<value>Scientist 3 Dialog Cutscene #4</value>
+	</data>
+	<data name="S3_1P1Cut4" xml:space="preserve">
+		<value>Scientist 3 Dialog Cutscene #4</value>
+	</data>
+	<data name="S3_1P2Cut4" xml:space="preserve">
+		<value>Scientist 3 Dialog Cutscene #4</value>
+	</data>
+	<data name="S3_1P3Cut4" xml:space="preserve">
+		<value>Scientist 3 Dialog Cutscene #4</value>
+	</data>
+	<data name="S3_1P4Cut4" xml:space="preserve">
+		<value>Scientist 3 Dialog Cutscene #4</value>
+	</data>
+	<data name="S3_1P5Cut4" xml:space="preserve">
+		<value>Scientist 3 Dialog Cutscene #4</value>
+	</data>
+	<data name="S3_1P6Cut4" xml:space="preserve">
+		<value>Scientist 3 Dialog Cutscene #4</value>
 	</data>
 	<data name="Special_Interaction_1" xml:space="preserve">
 		<value>Special Interaction tutorial</value>
